<?xml version="1.0"?>
<package format="2">
  <name>ria_pro_base</name>
  <version>0.1.0</version>
  <description>
    The package for RIA PRO base system
  </description>
  <maintainer email="shlee@gaitech.co.kr">Brighten Lee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>controller_manager</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ria_pro_msgs</depend>
  
  <depend>sick_tim</depend>
  <depend>realsense2_camera</depend>
  <depend>rgbd_launch</depend>
</package>