<?xml version="1.0"?>
<package format="2">
  <name>ria_pro_control</name>
  <version>0.1.0</version>
  <description>
    The controller package for RIA PRO
  </description>
  <maintainer email="shlee@gaitech.co.kr">Brighten Lee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>joint_state_controller</depend>
  <depend>twist_mux</depend>
  <depend>graft</depend>
</package>